[gd_scene load_steps=7 format=3 uid="uid://c41vi6t0bwddl"]

[ext_resource type="PackedScene" uid="uid://w7uifxrgs7i3" path="res://scenes/background.tscn" id="1_bg1aw"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_m18b4"]
[ext_resource type="Texture2D" uid="uid://bauc1451re2pf" path="res://assets/textures/bg/Purple.png" id="2_k5pss"]
[ext_resource type="FontFile" uid="uid://bv1rnx3susduu" path="res://assets/fonts/Kenney Pixel Square.ttf" id="3_f6ehg"]

[sub_resource type="LabelSettings" id="LabelSettings_ola14"]
font = ExtResource("3_f6ehg")

[sub_resource type="LabelSettings" id="LabelSettings_bi35j"]
font = ExtResource("3_f6ehg")
font_size = 8

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m18b4")

[node name="Background" parent="." instance=ExtResource("1_bg1aw")]
backround_texture = ExtResource("2_k5pss")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -81.0
offset_right = 65.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_ola14")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_bi35j")

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_bi35j")

[node name="SfxSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="BackButton" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 41.0
offset_top = 131.0
offset_right = 89.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("3_f6ehg")
theme_override_font_sizes/font_size = 8
text = "Back"
